# ai-hats

./: .agnix.toml  .gitignore  .privacy-allowlist  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  baseline-report.md  comparison-report.md  hello.sh  pyproject.toml  rack_driver.py
.claude/skills/audit-reviewer/: SKILL.md
.claude/skills/context-handoff/: metadata.yaml
.claude/skills/context-reset/: SKILL.md
.claude/skills/git-mastery/: SKILL.md  metadata.yaml
.claude/skills/request-supervisor/: SKILL.md
.claude/skills/retro-to-framework/: metadata.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release-packages.yml  release.yml
docs/: ARCHITECTURE.md  INDEX.md  README.ru.md  RELEASING.md  extending.md  glossary.md  how-to-advanced.md  how-to-backlog.md  how-to-cli-integrations.md  how-to-configure.md  how-to-custom-pipeline-steps.md  how-to-experiments.md  how-to-extend.md  how-to-feedback-loop.md  how-to-orchestration.md  how-to.md  migration-311.md  migration-333.md  migration-v0.10.0.md  migration-v0.8.0.md  migration-v0.9.0.md  migration.md  reflect.md  session-start-notices.md
docs/adr/: 0001-pipelines-as-typed-dataflow.md  0002-pipeline-subsystem-cli.md  0003-graded-mutation-policy.md  0004-per-session-plugin-dir.md  0005-composition-and-pipeline-value-contract.md  0006-worktree-concurrency-layered-defense.md  0007-judge-two-phase-split.md  0008-pipeline-timeout-cancellation.md  0009-quorum-autoclose-safe-direction.md  0010-bootstrap-paradox-self-location-and-forward-safe-config.md  0011-feedback-loop-validation.md  0012-worktree-data-transfer.md  0013-wt-core-extraction-boundary.md  0014-composable-component-decomposition.md  0015-task-ownership.md  0016-skill-tool-dependency-model.md  0017-backlog-yaml-single-definition.md
docs/assets/: README.md
docs/integrations/: gworkspace-cli-setup.md
docs/wt/: README.md  glossary.md  overview.md
experiments/: README.md
experiments/_lib/: clean.sh  collect.sh  common.sh  prepare.sh  report.sh  run.sh
experiments/hatrack-hardening/: .gitignore  README.md
scripts/: ai-hats-launcher  bootstrap.sh  check_pkg_version_skew.py  ci-local.sh  clean-tmp-cruft.sh  demo.tape  diagnose_retro_coverage.py  install-launcher.sh  run-e2e-gate.sh
src/ai_hats/: __init__.py  __main__.py  _bootstrap.py  _bump_internal.py  assembler.py  atomic_io.py  attachments.py  channel.py  claude_settings_lint.py  cli.py  composer.py  composition_payload.py  composition_seam.py  config.py  constants.py  costs.py  env_drift.py  environment_recovery.py  feedback.py  frontmatter.py  git_env.py  githooks.py  health.py  hook_collection.py  hooks_manager.py  library.py  library_schema.py  lifecycle_hooks.py  linked_context.py  materialize.py  migration_assert.py  migration_backup.py  migration_healer.py  migration_v07.py  migrations.py  models.py  observe.py  owners.py  paths.py  placeholders.py  (+44 more)
src/ai_hats/cli/: hyp.py  (+24 more)
tests/: README.md  _assembler_helpers.py  _cli_helpers.py  _pytester_env.py  _repo_integrity.py  conftest.py  test_assembler.py  test_assembler_git_hooks.py  test_assembler_leftover_sidecar_warn.py  test_assembler_library_root.py  test_assembler_managed_hooks_drift.py  test_assembler_relocate.py  test_assembler_runtime_hooks.py  test_assembler_sweep.py  test_assembler_worktree_hooks.py  test_assert_command_exists.py  test_atomic_io.py  test_attachments.py  test_audit_jsonl.py  test_audit_writer.py  test_audit_writer_parse_jsonl_fixture.py  test_auto_retro.py  test_auto_retro_reflect_session.py  test_bootstrap.py  test_bootstrap_sh.py  test_builtin_library_resolver_single_home.py  test_bump_gate.py  test_canonical_writer.py  test_channel.py  test_claude_settings_lint.py  test_cli_bare_through_pipeline.py  test_cli_broken_install.py  test_cli_config.py  test_cli_config_set_advanced.py  test_cli_customize_global.py  test_cli_execute.py  test_cli_execute_routing.py  test_cli_helpers.py  test_cli_human_through_pipeline.py  test_cli_hyp.py  (+225 more)
tests/e2e/: README.md  conftest.py  test_agent.py  test_agent_orchestration.py  test_agy_bypass.py  test_agy_detection.py  test_agy_headless_hook_execution.py  test_agy_provider_discovery.py  test_agy_wt_gate.py  test_bare.py  test_bootstrap_recovery_after_broken_pkg.py  test_broken_install_friendly_error.py  test_bump_backup_round_trip.py  test_bump_fails_loud_on_broken_hook.py  test_clean_tmp_cruft.py  test_cline_provider_discovery.py  test_cline_session_recorded.py  test_close_from_inside_worktree_refused.py  test_comment_length_lint_hook.py  test_config_fail_loud_on_newer_schema.py  test_config_preserve_unknown_roundtrip.py  test_config_set_channel.py  test_config_status_git_env_isolation.py  test_config_status_install_info.py  test_config_status_stable_source.py  test_customize_parallel_writes.py  test_dead_cwd_fail_loud.py  test_default_composition_flip.py  test_docs_index_guard.py  test_env_drift_startup_warn.py  test_env_scrub.py  test_epic_auto_transition_e2e.py  test_execute.py  test_execute_batch_requires_role.py  test_githooks_coexistence.py  test_golden_path.py  test_hats541_silent_done_regression.py  test_hitl_meta_prompt_persisted.py  test_hitl_with_retro.py  test_hook_materialization_self_heals.py  (+148 more)
tests/pipeline/: conftest.py  test_check_update_step.py  test_claude_provider.py  test_compose_overlay_propagation.py  test_execute.py  test_funnel_value_contract.py  test_human.py  test_judge_two_phase_split.py  test_maintainer_role.py  test_reflect_all.py  test_reflect_hypothesis.py  test_reflect_issue.py  test_reflect_session_main.py  test_role_split.py  test_sdk_options.py  test_sdk_runner.py  test_update_banner_step.py  test_update_check_wiring.py
tests/smoke/: test_bootstrap.py  test_feedback_loop.py  test_session_retro_pipeline.py  test_wt_standalone.py
tests/update_check/: test_cache.py  test_checker.py  test_is_disabled.py  test_is_local_channel.py  test_main.py  test_no_raw_has_update_readers.py  test_upstream_update.py
(+417 files in other folders)
