[build-system]
requires = ["setuptools>=77.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-hats"
dynamic = ["version"]
description = "Framework for composing and managing AI agents through composite roles"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "muratovv", email = "f@muratovv.me" },
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "filelock>=3.12",
    "ptyprocess>=0.7",
    # HATS-474: claude_agent_sdk powers the sub-agent / e2e path
    # (replaces direct subprocess(`claude -p`)). Pinned to 0.2.x — the
    # SDK stabilised its API at 0.2.0. Bundles the `claude` CLI binary
    # per-architecture, so installing the SDK is sufficient.
    "claude-agent-sdk>=0.2.0,<0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5",
    "ruff>=0.4",
    "bandit>=1.7",
    "pip-audit>=2.7",
]
costs = [
    "anthropic>=0.40",
]
aggregation = [
    "rapidfuzz>=3.0",
]

[project.scripts]
ai-hats = "ai_hats.cli:main_entry"

[tool.setuptools_scm]
version_file = "src/ai_hats/_version.py"

[tool.setuptools]
package-dir = {"" = "src", "ai_hats.library" = "library"}
packages = [
    "ai_hats",
    "ai_hats.cli",
    "ai_hats.harness",
    "ai_hats.hypothesis",
    "ai_hats.pipeline",
    "ai_hats.pipeline.steps",
    "ai_hats.retro",
    "ai_hats.templates",
    "ai_hats.update_check",
    "ai_hats.library",
]

[tool.setuptools.package-data]
"ai_hats" = ["templates/**/*"]
"ai_hats.library" = ["**/*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
# HATS-508: prepend ./src to sys.path so ``python -m pytest`` from a
# linked worktree imports the worktree's own ``ai_hats`` package
# rather than the editable install pointing at the main checkout.
# Pytest resolves the path relative to ``rootdir`` (the worktree root
# when running from inside it). Zero behavioural change for the main
# checkout — both the worktree's ``src/ai_hats`` and the installed
# editable point at the same files there.
pythonpath = ["src"]
filterwarnings = [
    # Python 3.14 deprecates forkpty() in multi-threaded processes.
    # ptyprocess (used by WrapRunner._pty_spawn and exercised in test_observe.py)
    # ultimately calls pty.fork() → os.forkpty(). Safe to suppress until
    # ptyprocess switches to the os.fork() + openpty() fallback path.
    "ignore:.*use of forkpty.*:DeprecationWarning",
]
markers = [
    "integration: tests that spawn real subprocesses or use real PTY",
    "smoke: lightweight real-path tests run by the pre-commit smoke gate on integration tasks",
    "external_env: tests that rely on real host environment (claude config, pip cache); candidates for sandboxing before xdist (HATS-464 R4)",
    "quarantine: known-flaky under the -n8 pre-push gate — deselected by the gate via `-m \"... and not quarantine\"` (HATS-676 / HYP-002). Still COLLECTED and run by a normal/solo pytest invocation, so dev coverage is preserved. Each tagged test carries a reason naming its de-flake follow-up.",
    "pip_heavy: e2e test that runs a real `pip install` at call time (own launcher build / `self update --force-reinstall`). Under `--dist=loadgroup` these are round-robined into PIP_HEAVY_GROUPS fixed xdist groups by tests/e2e/conftest.py so at most K hit the package index concurrently — capping the network-reset flake class (HATS-678 / HATS-676). Inert without loadgroup: still COLLECTED and run by a solo/serial pytest.",
]

[tool.coverage.run]
source = ["ai_hats"]
branch = false

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
