[build-system]
requires = ["setuptools>=77.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-hats"
dynamic = ["version"]
description = "Framework for composing and managing AI agents through composite roles"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "muratovv", email = "f@muratovv.me" },
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # First-party workspace package (uv source below) — atomic_io lives here.
    "ai-hats-core",
    "click>=8.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "filelock>=3.12",
    "ptyprocess>=0.7",
    # HATS-764: PEP 440 version compare for the stable channel's semver-
    # monotonic downgrade guard. Installed is a setuptools-scm dev string
    # (0.8.1.dev105+g…), target a clean PyPI release — a stdlib tuple-parse
    # mis-orders dev<release, so packaging.version.Version is load-bearing.
    "packaging>=23.0",
    # HATS-474: claude_agent_sdk powers the sub-agent / e2e path
    # (replaces direct subprocess(`claude -p`)). Pinned to 0.2.x — the
    # SDK stabilised its API at 0.2.0. Bundles the `claude` CLI binary
    # per-architecture, so installing the SDK is sufficient.
    "claude-agent-sdk>=0.2.0,<0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5",
    "ruff>=0.4",
    "bandit>=1.7",
    "pip-audit>=2.7",
]
costs = [
    "anthropic>=0.40",
]
aggregation = [
    "rapidfuzz>=3.0",
]

[tool.setuptools_scm]
version_file = "src/ai_hats/_version.py"

[tool.setuptools]
package-dir = {"" = "src", "ai_hats.library" = "library"}
packages = [
    "ai_hats",
    "ai_hats.cli",
    "ai_hats.harness",
    "ai_hats.hypothesis",
    "ai_hats.pipeline",
    "ai_hats.pipeline.steps",
    "ai_hats.retro",
    "ai_hats.templates",
    "ai_hats.update_check",
    "ai_hats.library",
]

[tool.setuptools.package-data]
"ai_hats" = ["templates/**/*"]
"ai_hats.library" = ["**/*"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
ai-hats-core = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests", "packages/ai-hats-core/tests"]
# HATS-508: prepend ./src to sys.path so ``python -m pytest`` from a
# linked worktree imports the worktree's own ``ai_hats`` package
# rather than the editable install pointing at the main checkout.
# Pytest resolves the path relative to ``rootdir`` (the worktree root
# when running from inside it). Zero behavioural change for the main
# checkout — both the worktree's ``src/ai_hats`` and the installed
# editable point at the same files there.
pythonpath = ["src", "packages/ai-hats-core/src"]
filterwarnings = [
    # Python 3.14 deprecates forkpty() in multi-threaded processes.
    # ptyprocess (used by WrapRunner._pty_spawn and exercised in test_observe.py)
    # ultimately calls pty.fork() → os.forkpty(). Safe to suppress until
    # ptyprocess switches to the os.fork() + openpty() fallback path.
    "ignore:.*use of forkpty.*:DeprecationWarning",
]
markers = [
    "integration: tests that spawn real subprocesses or use real PTY",
    "smoke: lightweight real-path tests run by the pre-commit smoke gate on integration tasks AND by the merge-to-master CI `merge-smoke` job (HATS-783) — must stay fast (no real network install / per-session venv build / claude auth) so they run on a hosted runner in minutes",
    "quarantine: known-flaky under the -n8 pre-push gate — deselected by the gate via `-m \"... and not quarantine\"` (HATS-676 / HYP-002). Still COLLECTED and run by a normal/solo pytest invocation, so dev coverage is preserved. Each tagged test carries a reason naming its de-flake follow-up.",
    "install_heavy: e2e test that runs a real `uv pip install` at call time (own launcher build / `self update`). Under `--dist=loadgroup` these are round-robined into INSTALL_HEAVY_GROUPS fixed xdist groups by tests/e2e/conftest.py so at most K hit the package index concurrently — the cold-network safety valve for the flake class HATS-676 quarantined. Default K relaxed to 8 under the uv engine (HATS-771: uv serves --reinstall from its warm global cache, so the pip-era throttle is inert in the happy path); re-throttle a degraded host via AI_HATS_E2E_INSTALL_HEAVY_GROUPS=<lower>. Inert without loadgroup: still COLLECTED and run by a solo/serial pytest.",
    "live_claude: e2e test that makes a real authenticated `claude` SDK/binary call (gates on the requires_claude_auth fixture). Auto-applied in tests/e2e/conftest.py to the whole live cohort. Deselect for a deterministic offline/no-auth e2e run via `-m \"not live_claude\"`. The pre-push gate intentionally does NOT deselect it — live coverage stays on for authed runs (HATS-583).",
]

[tool.coverage.run]
source = ["ai_hats"]
branch = false

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
